# axum-template

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml  test.yml
examples/: custom_engine.rs  custom_key.rs  dynamic_template.rs  folder.rs  handlebars.rs  minijinja-autoreload.rs  minijinja.rs  nested.rs  replace_engine.rs  tera.rs
examples/templates/minijinja/: hello.html
examples/templates/tera/: :name.html  greeting.html
src/: error.rs  key.rs  lib.rs  render.rs  template.rs  traits.rs
src/engine/: handlebars.rs  minijinja.rs  mod.rs  tera.rs  tinytemplate.rs
src/engines/: minijinja.rs  mod.rs
tests/: engine.rs  error.rs  key.rs  render.rs
